# NightOwl

./: .gitignore  AGENTS.md  LICENSE  README.md
app/: .env.example  .gitignore  alembic.ini  pyproject.toml
app/nightowl/: cli.py  config.py  db.py  events.py  main.py
app/nightowl/alembic/: env.py
app/nightowl/alembic/versions/: 08b621df72c2_create_all_tables.py  fbdc6be70a4c_initial_schema.py
app/nightowl/api/: API.md
app/nightowl/api/routers/: approvals.py  health.py  ingest.py  observability.py  prompts.py  sessions.py  shadow.py  skills.py  webhooks.py  websocket.py
app/nightowl/api/tests/: test_api.py
app/nightowl/channels/: CHANNELS.md  __init__.py  base.py  formatting.py  outbound.py  registry.py  session_routing.py  sms.py  telegram.py  types.py  whatsapp.py
app/nightowl/channels/telegram/: __init__.py  normalize.py  outbound.py  router.py  schemas.py  verify.py
app/nightowl/channels/tests/: conftest.py  test_base.py  test_sms.py  test_telegram.py  test_whatsapp.py
app/nightowl/composio_tools/: COMPOSIO.md  meta_tools.py
app/nightowl/composio_tools/tests/: conftest.py  test_meta_tools.py
app/nightowl/db/: __init__.py
app/nightowl/db/models/: __init__.py  approval.py  chat_message.py  message.py  session.py  skill.py  skill_resource.py
app/nightowl/events/: EVENTS.md  __init__.py  broadcaster.py  bus.py  schemas.py  translate.py
app/nightowl/hitl/: HITL.md  classifier.py  decorator.py  gate.py
app/nightowl/hitl/tests/: conftest.py  test_classifier.py  test_decorator.py  test_gate.py
app/nightowl/ingest/: INGEST.md  __init__.py  commands.py  service.py
app/nightowl/ingest/tests/: __init__.py  conftest.py  test_commands.py  test_service.py
app/nightowl/models/: MODELS.md  __init__.py  approval.py  message.py  observability.py  session.py
app/nightowl/models/tests/: test_models.py
app/nightowl/observability/: OBSERVABILITY.md  intent_classifier.py  intent_graph.py  token_store.py
app/nightowl/sandbox/: SANDBOX.md  __init__.py  bash_tool.py  browser_tool.py  computer_use_tool.py  file_tools.py  manager.py
app/nightowl/sandbox/images/: browser.Dockerfile  cli.Dockerfile  computer_use.Dockerfile  computer_use_bridge.py  entrypoint.sh  (+1 more)
app/nightowl/sessions/: SESSIONS.md  context_compaction.py  manager.py  prompt_builder.py  runner.py  shadow.py  store.py  tools.py
app/nightowl/skills/: SKILLS.md  loader.py  parser.py  store.py  tools.py
docs/: SPEC.md  (+4 more)
(+104 files in other folders)
