[project]
name = "assistant-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Francois van Kempen & Sam Kanu", email = "francois@francoisvankempen.com"},
]
dependencies = ["composio>=0.11.3", "pydantic-ai>=1.68.0", "fastmcp>=3.1.0", "fastapi>=0.135.1", "asyncpg>=0.31.0", "sqlalchemy>=2.0.48", "pydantic-settings>=2.13.1", "logfire>=4.0.0", "stamina>=25.2.0", "redis[hiredis]>=7.3.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
chat = "python -m nightowl.cli"

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["nightowl"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::logfire._internal.config.LogfireNotConfiguredWarning"]
